# enochianresearch

./: .gitignore  README.md  _quarto.yml  dictionary.json  enochian_keys.txt  index.qmd  pyproject.toml
data/: enochian_keys.json
notebooks/: 00_sanity_check.ipynb
